# careerproof-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: __init__.py  agent.py  config.py  schemas.py
app/data/: industries.json
app/tools/: evidence_mapper.py  industry_map.py  job_signals.py  privacy.py
artifacts/sample_outputs/: fintech_risk_analyst_sample.md  healthcare_business_analyst_sample.md  marketplace_analyst_sample.md
docs/: architecture.md  demo_script.md  github_upload_steps.md  industry_coverage.md  ipo_platform_plan.md  kaggle_writeup.md  market_research_summary.md  product_strategy.md  streamlit_deployment.md  submission_checklist.md
specs/: careerproof.feature
tests/eval/: local_grade.py
tests/eval/datasets/: basic-dataset.json
